--- a/css/style-connect.scss
+++ b/css/style-connect.scss
@@ -31,12 +31,12 @@ body {
 
 h1 {
   margin-bottom: 1.4rem;
-  font-family: 'Nova Slim', cursive, sans-serif;
+  font-family: "Nova Slim", cursive, sans-serif;
 }
 
 h2 {
   text-align: center;
-  font-family: 'Hind Madurai', sans-serif;
+  font-family: "Hind Madurai", sans-serif;
 }
 
 p {
@@ -53,7 +53,6 @@ a {
   text-decoration: none;
   margin: 15px 0;
 }
-
 
 button:active {
   transform: scale(0.95);
@@ -102,7 +101,7 @@ form {
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
-  
+
     &:hover {
       cursor: pointer;
     }
@@ -119,7 +118,7 @@ input {
 
 main {
   height: 100%;
-  
+
   #section-authentication {
     width: 1440px;
     height: 100%;
@@ -143,6 +142,27 @@ main {
       top: 0;
       height: 100%;
       transition: all 0.6s ease-in-out;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-width: 0;
+        border-style: solid;
+        border-top-color: #fafafb;
+        border-right-color: $white;
+        border-left-color: #fafafb;
+        border-bottom-color: $white;
+        border-radius: 0 0 5px 0;
+        transition: border 0.5s ease-out;
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+        0 10px 10px rgba(0, 0, 0, 0.22);
+      }
+
+      &:hover::before {
+        border-width: 100px;
+      }
     }
 
     .sign-in-container {
