--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -707,6 +707,86 @@ section#loan-register {
       }
     }
   }
+
+  // FORM LOAN BOX INBOOK
+
+  form#form-in-loan-register {
+    .label-form-add-book {
+      display: block;
+      font-size: 18px;
+      margin-right: 20px;
+      color: $main-blue;
+      font-weight: bold;
+    }
+
+    .input-form-add-book {
+      width: 600px;
+      height: 44px;
+      font-size: 20px;
+      border-radius: 5px;
+      padding-left: 10px;
+      border: 1px solid gray;
+      margin-bottom: 30px;
+    }
+
+    div#form-in-loan-register-left {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+
+      div.add-form-template-label-input {
+        .label-form-add-book {
+          font-size: 18px;
+          margin-right: 20px;
+        }
+      }
+    }
+
+    div#group-btn-in-loan-register-commun {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-top: 40px;
+      margin-right: 111px;
+
+      #btn-reset-form-in-loan-register {
+        width: 160px;
+        height: 40px;
+        font-weight: bold;
+        border-radius: 10px;
+        background-color: transparent;
+        border: 1px solid $main-blue;
+        color: $main-blue;
+        margin-right: 30px;
+        margin-right: 20px;
+
+        &:hover {
+          cursor: pointer;
+          background-color: $main-blue;
+          color: $white;
+        }
+      }
+
+      #btn-submit-form-in-loan-register {
+        width: 160px;
+        height: 40px;
+        font-weight: bold;
+        border-radius: 10px;
+        background-color: $main-blue;
+        border: $main-blue;
+        color: $white;
+        margin-right: 30px;
+        margin-right: 20px;
+
+        &:hover {
+          cursor: pointer;
+          background-color: $btn-main-blue-over;
+        }
+      }
+    }
+  }
 }
 
 // ----------  SECTION DASHBOARD - PAGE CRUD----------
