--- a/css/style.scss
+++ b/css/style.scss
@@ -508,12 +508,12 @@ h2 {
   padding-top: 60px;
   overflow: hidden;
 
-  p#sub-title {
+  p.sub-title-section {
     text-align: center;
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 100px;
-    color: $white;
+    color: $black;
   }
 
   #group-btn {
