--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h2 {
   }
 }
 #main-header #main-nav-bar.anim-nav {
-  border-bottom: 1px solid gray;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 #main-header #main-nav-bar #container-nav-bar {
   width: 100%;
@@ -244,7 +244,9 @@ h2 {
 
 #section-news {
   width: 100%;
-  padding-bottom: 60px;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background: #0868ae;
   background: linear-gradient(to bottom, #0868ae 0%, #0868ae 100%);
 }
@@ -267,10 +269,6 @@ h2 {
   #section-news #container-section-news {
     flex-wrap: nowrap;
   }
-}
-#section-news #container-section-news #item-section-news-left {
-  -webkit-backdrop-filter: blur(1px);
-          backdrop-filter: blur(1px);
 }
 #section-news #container-section-news #item-section-news-left h1 {
   white-space: nowrap;
@@ -703,6 +701,7 @@ h2 {
   width: 100%;
   height: 400px;
   padding: 80px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background-image: radial-gradient(circle at 19% 90%, rgba(190, 190, 190, 0.04) 0%, rgba(190, 190, 190, 0.04) 17%, transparent 17%, transparent 100%), radial-gradient(circle at 73% 2%, rgba(78, 78, 78, 0.04) 0%, rgba(78, 78, 78, 0.04) 94%, transparent 94%, transparent 100%), radial-gradient(circle at 45% 2%, rgba(18, 18, 18, 0.04) 0%, rgba(18, 18, 18, 0.04) 55%, transparent 55%, transparent 100%), radial-gradient(circle at 76% 60%, rgba(110, 110, 110, 0.04) 0%, rgba(110, 110, 110, 0.04) 34%, transparent 34%, transparent 100%), radial-gradient(circle at 68% 56%, rgba(246, 246, 246, 0.04) 0%, rgba(246, 246, 246, 0.04) 16%, transparent 16%, transparent 100%), radial-gradient(circle at 71% 42%, rgba(156, 156, 156, 0.04) 0%, rgba(156, 156, 156, 0.04) 47%, transparent 47%, transparent 100%), radial-gradient(circle at 46% 82%, rgba(247, 247, 247, 0.04) 0%, rgba(247, 247, 247, 0.04) 39%, transparent 39%, transparent 100%), radial-gradient(circle at 50% 47%, rgba(209, 209, 209, 0.04) 0%, rgba(209, 209, 209, 0.04) 45%, transparent 45%, transparent 100%), linear-gradient(90deg, rgb(8, 104, 174), rgb(5, 73, 123));
   background-position: center;
   background-size: cover;
@@ -916,6 +915,7 @@ h2 {
   border-radius: 50px;
   color: #fff;
   padding: 20px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 #section-faq #banner-faq-contact h4 {
   font-style: normal;
@@ -991,6 +991,7 @@ h2 {
   width: 100%;
   padding: 40px 20px 60px;
   background-color: #043a61;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 #footer #container-footer-top {
   width: 100%;
