--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,12 @@ h2 {
     font-size: 16px;
     width: 300px;
     height: 45px;
-    border-radius: 15px;
+    border-radius: 8px;
     padding-left: 30px;
     border: none;
+  }
+  #main-header #main-nav-bar #container-nav-bar #container-group-search-nav-top #input-search-nav-top:focus {
+    outline: none;
   }
 }
 @media screen and (min-width: 1100px) {
@@ -148,17 +151,17 @@ h2 {
   #main-header #main-nav-bar #container-nav-bar #container-group-search-nav-top input#btn-search-nav-top {
     display: block;
     position: absolute;
-    right: -2px;
-    top: -2px;
+    right: 0;
+    top: 0;
     width: 150px;
     border: none;
     font-size: 16px;
     font-family: "Hind Madurai", sans-serif;
     font-weight: bold;
-    padding: 14px 0;
+    padding: 12px 0;
     background-color: #ff5e38;
     color: #fff;
-    border-radius: 10px;
+    border-radius: 8px;
     text-align: center;
     transition: background-color 0.3s ease;
   }
@@ -170,36 +173,8 @@ h2 {
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion {
   margin-left: auto;
 }
-@media screen and (min-width: 950px) {
-  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion {
-    display: flex;
-    justify-items: center;
-    align-items: center;
-  }
-}
-#main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion #btn-log-in {
-  display: none;
-  font-weight: bold;
-}
-@media screen and (min-width: 950px) {
-  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion #btn-log-in {
-    display: block;
-    padding: 10px;
-    background-color: transparent;
-    color: #ff5e38;
-    font-size: 16px;
-    font-family: "Hind Madurai", sans-serif;
-    margin-right: 10px;
-  }
-  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion #btn-log-in:hover {
-    border: 3px solid #ff5e38;
-    border-radius: 10px;
-    margin-left: -6px;
-  }
-}
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion #btn-sign-up #menu-burger {
-  width: 50px;
-  height: 50px;
+  padding: 10px 30px;
   color: #fff;
   border-radius: 10px;
   display: flex;
@@ -230,7 +205,7 @@ h2 {
 @media screen and (min-width: 950px) and (min-width: 950px) {
   #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion #btn-sign-up span {
     display: block;
-    padding: 12px;
+    padding: 12px 24px;
     background-color: #ff5e38;
     color: #fff;
     border-radius: 10px;
@@ -442,7 +417,6 @@ h2 {
 #section-heart {
   width: 100%;
   padding-top: 120px;
-  padding-top: 60px;
   overflow: hidden;
 }
 #section-heart p.sub-title-section {
@@ -502,7 +476,7 @@ h2 {
   transition: transform 1s ease;
 }
 #section-heart ul.top li {
-  margin-bottom: 120px;
+  margin-bottom: 60px;
 }
 @media screen and (min-width: 950px) {
   #section-heart ul.top li {
@@ -844,25 +818,29 @@ h2 {
 #section-zoom #container-section-zoom {
   width: 100%;
 }
-#section-zoom #container-section-zoom div.pict-left, #section-zoom #container-section-zoom div.pict-right {
+#section-zoom #container-section-zoom div.pict-left,
+#section-zoom #container-section-zoom div.pict-right {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
   margin: 0 auto;
   justify-content: space-evenly;
 }
-#section-zoom #container-section-zoom div.pict-left h4, #section-zoom #container-section-zoom div.pict-right h4 {
+#section-zoom #container-section-zoom div.pict-left h4,
+#section-zoom #container-section-zoom div.pict-right h4 {
   font-size: 30px;
   color: #ff5e38;
   margin-bottom: 2px;
 }
-#section-zoom #container-section-zoom div.pict-left h5, #section-zoom #container-section-zoom div.pict-right h5 {
+#section-zoom #container-section-zoom div.pict-left h5,
+#section-zoom #container-section-zoom div.pict-right h5 {
   font-size: 18px;
   margin-bottom: 20px;
 }
-#section-zoom #container-section-zoom div.pict-left p, #section-zoom #container-section-zoom div.pict-right p {
-  font-size: 20PX;
-  color: #11635F;
+#section-zoom #container-section-zoom div.pict-left p,
+#section-zoom #container-section-zoom div.pict-right p {
+  font-size: 20px;
+  color: #11635f;
 }
 #section-zoom #container-section-zoom div.pict-right .item-text-commun {
   padding: 20px;
@@ -891,11 +869,10 @@ h2 {
 
 #section-faq {
   position: relative;
-  padding-top: 100px;
-  padding-bottom: 60px;
+  padding-top: 120px;
 }
 #section-faq h2#section-title {
-  margin-bottom: -30px;
+  margin-bottom: 30px;
 }
 #section-faq h3.h3-faq {
   text-align: center;
@@ -970,7 +947,7 @@ h2 {
   justify-content: space-evenly;
   text-align: center;
   background-color: #0868ae;
-  border-radius: 50px;
+  border-radius: 12px;
   color: #fff;
   padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
@@ -1002,11 +979,12 @@ h2 {
 
 #section-location {
   position: relative;
+  padding-top: 120px;
   padding-bottom: 150px;
 }
 #section-location h3.h3-location {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
 }
 #section-location p {
   width: 90%;
@@ -1020,7 +998,7 @@ h2 {
 }
 #section-location #iframe-google {
   position: absolute;
-  top: 475px;
+  top: 555px;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -1032,8 +1010,8 @@ h2 {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 500px;
-  border-radius: 0 0 20px 20px;
+  margin-top: 480px;
+  border-radius: 0 0 12px 12px;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
@@ -1047,7 +1025,7 @@ h2 {
 
 #footer {
   width: 100%;
-  padding: 40px 20px 60px;
+  padding: 120px 20px 60px;
   background-color: #043a61;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
