--- a/css/style.css
+++ b/css/style.css
@@ -471,10 +471,6 @@ p.sub-title-section {
     padding-right: 25px;
   }
 }
-#section-heart ul.top .animated-card {
-  position: relative;
-  opacity: 0;
-}
 #section-heart ul.top li {
   margin-bottom: 60px;
 }
@@ -484,20 +480,26 @@ p.sub-title-section {
     margin-right: -100px;
     margin-left: -30px;
     padding: 0;
-    transition: transform 0.5s ease;
+    transition: all 0.5s ease;
   }
+}
+@media screen and (min-width: 950px) {
   #section-heart ul.top li:hover {
     transform: translateY(-50px);
   }
 }
-#section-heart ul.top li a {
+#section-heart ul.top .animated-card {
+  position: relative;
+  opacity: 0;
+}
+#section-heart ul.top a {
   font-weight: bolder;
   line-height: 155px;
   font-size: 300px;
   font-family: "Risque", cursive, sans-serif;
   margin-bottom: 20px;
 }
-#section-heart ul.top li a img {
+#section-heart ul.top a img {
   width: 180px;
   height: 280px;
   -o-object-fit: cover;
@@ -505,38 +507,39 @@ p.sub-title-section {
   border-radius: 8px;
   margin-left: -50px;
 }
-#section-heart ul.top li:nth-child(1) a {
+#section-heart li:nth-child(1) a {
   color: #ff6b38;
   position: relative;
   left: -10%;
   top: 0;
 }
 @media screen and (min-width: 950px) {
-  #section-heart ul.top li:nth-child(1) a {
+  #section-heart li:nth-child(1) a {
     left: -120px;
     top: 100px;
     margin-right: -100px;
   }
 }
-#section-heart ul.top li:nth-child(1) a img {
+#section-heart li:nth-child(1) a img {
   position: absolute;
   top: 0px;
   transform-origin: bottom left;
   transform: rotate(-5deg);
   width: 200px;
   height: 300px;
-  margin-left: -30px;
+  margin-left: -10px;
 }
-#section-heart ul.top li:nth-child(2) a {
+#section-heart li:nth-child(2) a {
   color: #28e2d9;
 }
-#section-heart ul.top li:nth-child(3) a {
+#section-heart li:nth-child(3) a {
   color: #ffd317;
 }
-#section-heart ul.top li:nth-child(4) a {
+#section-heart li:nth-child(4) a {
   color: #0b95fa;
 }
-#section-heart #btn-show-heart {
+
+#btn-show-heart {
   display: block;
   width: 343px;
   margin: 0 auto;
@@ -550,9 +553,9 @@ p.sub-title-section {
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
   color: #fff;
-  transition: opacity 0.3s ease, transform 0.3s ease;
+  transition: all 0.3s ease;
 }
-#section-heart #btn-show-heart:hover {
+#btn-show-heart:hover {
   opacity: 0.9;
   transform: scale(1.1);
 }
@@ -593,7 +596,7 @@ p.sub-title-section {
   height: 230px;
   padding: 15px 5px 15px 200px;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #fafafb;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   opacity: 0;
   transform: translateY(100%);
@@ -602,7 +605,7 @@ p.sub-title-section {
   transform: translateY(-15px);
 }
 #section-soon-available #container-cards .card:hover {
-  background-color: #fafafb;
+  background-color: #fff;
 }
 #section-soon-available #container-cards .card.show-card-row1 {
   animation: slide-up 0.5s ease forwards;
