--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@ $main-blue: #0868ae;
 $white: #fff;
 $black: #070606;
 $footer: #043a61;
+$background: #fafafb;
 
 *,
 ::after,
@@ -538,107 +539,110 @@ p.sub-title-section {
       padding-right: 25px;
     }
 
-    .animated-card {
-      position: relative;
-      opacity: 0;
-    }
-
     li {
       margin-bottom: 60px;
-
+    
       @media screen and (min-width: 950px) {
         width: 33%;
         margin-right: -100px;
         margin-left: -30px;
         padding: 0;
-        transition: transform 0.5s ease;
-
-        &:hover {
+        transition: all 0.5s ease;
+      }
+    
+      &:hover {
+        @media screen and (min-width: 950px) {
           transform: translateY(-50px);
         }
       }
-
-      a {
-        font-weight: bolder;
-        line-height: 155px;
-        font-size: 300px;
-        font-family: "Risque", cursive, sans-serif;
-        margin-bottom: 20px;
-
-        img {
-          width: 180px;
-          height: 280px;
-          object-fit: cover;
-          border-radius: 8px;
-          margin-left: -50px;
-        }
-      }
     }
-
-    li:nth-child(1) {
-      a {
-        color: #ff6b38;
-        position: relative;
-        left: -10%;
-        top: 0;
-
-        @media screen and (min-width: 950px) {
-          left: -120px;
-          top: 100px;
-          margin-right: -100px;
-        }
-
-        img {
-          position: absolute;
-          top: 0px;
-          transform-origin: bottom left;
-          transform: rotate(-5deg);
-          width: 200px;
-          height: 300px;
-          margin-left: -30px;
-        }
-      }
+    
+    .animated-card {
+      position: relative;
+      opacity: 0;
     }
+    
 
-    li:nth-child(2) {
-      a {
-        color: #28e2d9;
-      }
-    }
+    a {
+      font-weight: bolder;
+      line-height: 155px;
+      font-size: 300px;
+      font-family: "Risque", cursive, sans-serif;
+      margin-bottom: 20px;
 
-    li:nth-child(3) {
-      a {
-        color: #ffd317;
-      }
-    }
-
-    li:nth-child(4) {
-      a {
-        color: #0b95fa;
+      img {
+        width: 180px;
+        height: 280px;
+        object-fit: cover;
+        border-radius: 8px;
+        margin-left: -50px;
       }
     }
   }
 
-  #btn-show-heart {
-    display: block;
-    width: 343px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 12px 24px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    background: $main-blue;
-    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-    border-radius: 8px;
-    color: $white;
-    transition: opacity 0.3s ease, transform 0.3s ease;
+  li:nth-child(1) {
+    a {
+      color: #ff6b38;
+      position: relative;
+      left: -10%;
+      top: 0;
 
-    &:hover {
-      opacity: 0.9;
-      transform: scale(1.1);
+      @media screen and (min-width: 950px) {
+        left: -120px;
+        top: 100px;
+        margin-right: -100px;
+      }
+
+      img {
+        position: absolute;
+        top: 0px;
+        transform-origin: bottom left;
+        transform: rotate(-5deg);
+        width: 200px;
+        height: 300px;
+        margin-left: -10px;
+      }
     }
+  }
+
+  li:nth-child(2) {
+    a {
+      color: #28e2d9;
+    }
+  }
+
+  li:nth-child(3) {
+    a {
+      color: #ffd317;
+    }
+  }
+
+  li:nth-child(4) {
+    a {
+      color: #0b95fa;
+    }
+  }
+}
+
+#btn-show-heart {
+  display: block;
+  width: 343px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 12px 24px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  background: $main-blue;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+  color: $white;
+  transition: all 0.3s ease;
+
+  &:hover {
+    opacity: 0.9;
+    transform: scale(1.1);
   }
 }
 
@@ -680,7 +684,7 @@ p.sub-title-section {
       height: 230px;
       padding: 15px 5px 15px 200px;
       border-radius: 8px;
-      background-color: $white;
+      background-color: $background;
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
       opacity: 0;
       transform: translateY(100%);
@@ -690,23 +694,23 @@ p.sub-title-section {
       }
 
       &:hover {
-        background-color: #fafafb;
+        background-color: $white;
       }
 
       &.show-card-row1 {
         animation: slide-up 0.5s ease forwards;
         animation-delay: calc(0.3s * (var(--card-index) - 1));
       }
-      
+
       &.show-card-row2 {
         animation: slide-up 0.5s ease forwards;
         animation-delay: calc(0.3s * (var(--card-index) - 1));
       }
-      
+
       &.show-card-row3 {
         animation: slide-up 0.5s ease forwards;
         animation-delay: calc(0.3s * (var(--card-index) - 1));
-      }   
+      }
     }
 
     span.tag-new-index {
